# markitdown-gui

./: .gitignore  LICENSE  MarkItDown.spec  README.md  README_zh.md  README_zh_TW.md  _apply_qml.py  _apply_translations.py  _build_map.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  release.yml
markitdowngui/: __init__.py  build_config.py  main.py
markitdowngui/core/: conversion.py  settings.py
markitdowngui/qml/: Main.qml
markitdowngui/qml/components/: AppButton.qml  AppComboBox.qml  AppSpinBox.qml  AppTextField.qml  Icon.qml  InspectorRail.qml  MetricPill.qml  SectionPanel.qml  SideNav.qml  ToggleRow.qml
markitdowngui/ui_qml/: __init__.py  app.py  controller.py  models.py
markitdowngui/utils/: logger.py  packaged_updater.py  settings_profile.py  source_updater.py  support_bundle.py  translations.py  update_checker.py
packaging/windows/: MarkItDown.iss
tests/: test_build_config.py
tests/core/: test_conversion.py  test_settings.py
tests/ui_qml/: test_controller.py  test_models.py  test_qml_load.py
tests/utils/: test_packaged_updater.py  test_settings_profile.py  test_source_updater.py  test_support_bundle.py  test_update_checker.py
