[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markitdowngui"
version = "0.1.0"
description = "A GUI wrapper for MarkItDown to convert files to Markdown via drag-and-drop."
authors = [{name = "imadreamerboy", email = "jonas@imadreamerboy.com"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markitdown[az-doc-intel,docx,pdf,pptx,xls,xlsx]==0.1.6",
    "pypdfium2",
    "pytesseract",
    "pyside6>=6.8.2.1",
    "glmocr==0.1.4",
    "markitdown-pdf-images @ git+https://github.com/imadreamerboy/markitdown-pdf-images.git@b1e2fafec9545acd5713974a32a2f7fe7a37b7f4",
]

[project.urls]
Homepage = "https://github.com/imadreamerboy/markitdowngui"
Repository = "https://github.com/imadreamerboy/markitdowngui"

[tool.setuptools.packages.find]
include = ["markitdowngui*"]

[tool.setuptools.package-data]
markitdowngui = [
    "qml/**/*.qml",
    "resources/*",
    "resources/icons/*.svg",
    "resources/icons/light/*.svg",
    "resources/icons/LICENSE.lucide.txt",
]

[project.optional-dependencies]
dev = [
    "markitdowngui[test]",
    "pyinstaller",
]
test = [
    "pytest",
    "pytest-mock",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
